--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.15.0",
     "sass": "^1.65.1",
@@ -38,8 +39,8 @@
     "three": "^0.157.0",
     "typescript": "5.1.6",
     "use-sound": "^4.0.1",
-    "wagmi": "^1.4.2",
     "viem": "^1.12.2",
+    "wagmi": "^1.4.2",
     "web3": "4.1.1-dev.86f0cdb.0",
     "web3-core": "4.0.3",
     "web3-errors": "1.0.2",
